fix: Adicionando visibilidade e invisibilidade no saldo

--- a/assets/css/sacar.css
+++ b/assets/css/sacar.css
@@ -68,7 +68,6 @@
 	}
 
 	.saldo.hide {
-		text-decoration: line-through;
       opacity: 0.4;
 	}
 
